# agentic-cookbook

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  PROJECT_CONTEXT.md  README.md  pyproject.toml  theta.py  theta_ui.py
.streamlit/: config.toml
agents/mini-researcher/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  researcher.py
agents/mini-researcher/docs/: ARCHITECTURE.md
agents/mini-researcher/prompts/: planner.md  synthesis.md
agents/mini-researcher/researcher/: compress.py  config.py  llm.py  pipeline.py  planner.py  prompts.py  report.py  scraper.py  search.py  worker.py
agents/theta-agent/: .gitignore  CLAUDE.md  README.md  pyproject.toml
core/: agent.py  logger.py  memory.py  model.py  registry.py
docs/: 01_react_basic.md  02_plan_and_execute.md  OVERVIEW.md  architectures.md  documentation_guide.md  llm_provider_strategies.md  reference_architectures.md
docs/01_agent_patterns/: 01_react_basic.md  02_plan_and_execute.md  03_reflexion.md
examples/: 01_react_basic.py  02_plan_and_execute.py  03_reflexion.py
examples/00_primitives/: 01_tool_use.md  01_tool_use.py  02_context_window.md  02_context_window.py  03_stop_condition.md  03_stop_condition.py  README.md
examples/01_agent_patterns/: 01_react_basic.md  01_react_basic.py  02_plan_and_execute.md  02_plan_and_execute.py  03_reflexion.md  03_reflexion.py  README.md
examples/02_memory_management/: 01_markdown_persistence.md  01_markdown_persistence.py  01_windowed_memory.py  02_hybrid_search.md  02_hybrid_search.py  02_markdown_persistence.md  02_markdown_persistence.py  README.md
examples/03_multi_agent_systems/: 01_orchestrator_worker.md  01_orchestrator_worker.py  02_parallel_subagents.md  02_parallel_subagents.py  03_sequential_pipeline.md  03_sequential_pipeline.py  04_async_announce.md  04_async_announce.py  README.md
examples/04_tool_use_patterns/: README.md  (+8 more)
prompts/: system.md
tests/: test_tools.py
theta/: agent.py  models.py  prompts.py  tools.py
theta-agent/: CLAUDE.md  CONTEXT.md  README.md  read_log.py  theta.py
tools/: __init__.py  earnings.py  financials.py  options.py  price.py  search.py  system_tools.py
ui/: app.py  common.py
(+39 files in other folders)
