[project]
name = "mini-researcher"
version = "0.1.0"
description = "Simplified port of gpt-researcher: plan -> parallel search/scrape/compress -> synthesize"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "requests>=2.34.2",
    "beautifulsoup4>=4.12.0",
    "ddgs>=9.0.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
mini-researcher = "researcher:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["researcher*"]
